$ Consolidated some strings
#+ [#20528] Inconsistency in user groups [sample data]. Tree rebuilding. Thanks Christophe.
# [#20533] Fatal error "Call to undefined method JAdministrator::getLanguageFilter()" when enabling search logging + "Show Search Results". Thanks Denis and Christophe.
+ [#20592] Add sample data positions to Atomic. Thanks Elin.
 
23-May-2010 Mark Dexter
# Sample data fixes (Elin Waring)

23-May-2010 Jean-Marie Simonet
[#20568] Update publish time on front end. Thanks Michael.
[#20465] Notice: Undefined property: stdClass::$author_name on many pages. Thanks Bill.
$ Completing some language strings

22-May-2010 Jean-Marie Simonet
$ [#20564] Inconsistence between userS and user view
# [#20469] Notice: Trying to get property of non-object in /components/com_weblinks/views/form/tmpl/edit.php on line 47
# [#20486] Published date not being generated
# [#20511] Database error prevents installation (PHP strict)
$ Adding missing string. Sorting some main ini strings.
# [#20556] Home menu items are routed with alias if language switcher plugin is off. Thanks Dennis
$ [#20566] Change "Other Informations" to "Other Information". Thanks Michael.
 
21-May-2010 Jean-Marie Simonet
# Sample data error [20550]. Thanks Radek.
$ Adapted some com_search strings to different languages
$ Took off what should not be a custom key in beez [20553]
# [#20558] Correcting wrong featured layout

20-May-2010 Christophe Demko
 # Fixed misspelling variable name in JLanguage
 # Fixed [#20543] Site language changing does not work

20-May-2010 Jean-Marie Simonet
# Fixed accidentally deleted com_users in sql jos_extensions
+ Implementing auto language metadata [20284]
$ Fixing strings in contact
# Fixing category name/title in single contact. (Thanks Bill)
^ New JDate::toFormat [20531] Thanks Christophe.
# Saving Banners urls in the clickurl db field [20532]

19-May-2010 Mark Dexter
# Sample data fixes (Elin Waring)

19-May-2010 Jean-Marie Simonet
$ Updating en-GB.xml files