@@ -44,7 +44,7 @@ $baseurl = JURI::base();
 							<img
 								src="<?php echo $baseurl . $imageurl;?>"
 								alt="<?php echo $alt;?>"
-								<?php if (!empty($width)) echo 'witdh ="'. $width.'"';?>
+								<?php if (!empty($width)) echo 'width ="'. $width.'"';?>
 								<?php if (!empty($height)) echo 'height ="'. $height.'"';?>
 							/>
 						</a>
@@ -58,7 +58,7 @@ $baseurl = JURI::base();
 							<img
 								src="<?php echo $baseurl . $imageurl;?>"
 								alt="<?php echo $alt;?>"
-								<?php if (!empty($width)) echo 'witdh ="'. $width.'"';?>
+								<?php if (!empty($width)) echo 'width ="'. $width.'"';?>
 								<?php if (!empty($height)) echo 'height ="'. $height.'"';?>
 							/>
 						</a>
@@ -70,7 +70,7 @@ $baseurl = JURI::base();
 							<img
 								src="<?php echo $baseurl . $imageurl;?>"
 								alt="<?php echo $alt;?>"
-								<?php if (!empty($width)) echo 'witdh ="'. $width.'"';?>
+								<?php if (!empty($width)) echo 'width ="'. $width.'"';?>
 								<?php if (!empty($height)) echo 'height ="'. $height.'"';?>
 							/>
 						</a>
@@ -80,7 +80,7 @@ $baseurl = JURI::base();
 					<img
 						src="<?php echo $baseurl . $imageurl;?>"
 						alt="<?php echo $alt;?>"
-						<?php if (!empty($width)) echo 'witdh ="'. $width.'"';?>
+						<?php if (!empty($width)) echo 'width ="'. $width.'"';?>
 						<?php if (!empty($height)) echo 'height ="'. $height.'"';?>
 					/>
 				<?php endif;?>
@@ -89,7 +89,7 @@ $baseurl = JURI::base();
 					classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 					codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"
 					border="0"
-					<?php if (!empty($width)) echo 'witdh ="'. $width.'"';?>
+					<?php if (!empty($width)) echo 'width ="'. $width.'"';?>
 					<?php if (!empty($height)) echo 'height ="'. $height.'"';?>
 				>
 					<param name="movie" value="<?php echo $imageurl;?>" />
@@ -98,7 +98,7 @@ $baseurl = JURI::base();
 						loop="false"
 						pluginspage="http://www.macromedia.com/go/get/flashplayer"
 						type="application/x-shockwave-flash"
-						<?php if (!empty($width)) echo 'witdh ="'. $width.'"';?>
+						<?php if (!empty($width)) echo 'width ="'. $width.'"';?>
 						<?php if (!empty($height)) echo 'height ="'. $height.'"';?>
 					></embed>
 				</object>
