@@ -36,7 +36,8 @@ $ Consolidated some strings
 #+ [#20528] Inconsistency in user groups [sample data]. Tree rebuilding. Thanks Christophe.
 # [#20533] Fatal error "Call to undefined method JAdministrator::getLanguageFilter()" when enabling search logging + "Show Search Results". Thanks Denis and Christophe.
 + [#20592] Add sample data positions to Atomic. Thanks Elin.
- 
+# [#20607] "witdh" instead of "width" in mod_banners default template. Thanks Michael.
+
 23-May-2010 Mark Dexter
 # Sample data fixes (Elin Waring)
 
